--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -3,7 +3,7 @@
 This section will look into:
 \begin{itemize}
 	\item Mechanical Design:
-	\item Printed Circuit Board Design
+	\item Electrical Design
 	\item Instrumentation
 	\item Software and Control Design
 \end{itemize}
@@ -130,6 +130,50 @@ $$e_{k} = 2hl_{k}^{(z)} $$
 $$e_{k} = 2h(cos(\beta_{k})I_{k}^{(x)}+sin({\beta_{k}})I_{k}^(y))$$
 $$g_{k} = l_{k}^2 - (d^2 - h^2)   $$
 
+\subsubsection{Actuation}
+Two methods of actuation are popular with Stewart platforms:
+\begin{itemize}
+\item Linear actuators
+\item Use of motors
+\end{itemize}
+Whereas linear actuators are relatively easy to control, they are very expensive. Thus the choice of motors.
+
+\subsubsection*{Motor Selection}
+One parameter was considered in our motor selection i.e. torque required. From the Autodesk Inventor design environment, the mass of the moving platform and mechanical couplings was 2.6kg. Each motor is supposed to move a minimum mass of 0.177kg. Using a servo horn of distance 45mm centre-to-centre, and Distance = $ \pi $ D, then:
+\begin{ceqn}
+\begin{align}
+	Torque = (0.1777 \times 9.81)\times \frac{141.37}{1000} = 0.246 N\cdot m
+\end{align}
+\end{ceqn}
+Motors of minimum torque of 0.2 N $\cdot m$ were considered. But for control considerations, only stepper motors and servo motors were shortlisted. Servo motor was considered over Stepper motor because they are cheaper. Also, we are only interested in 0 - 180 degrees positions.
+
+The Servo motor \textbf{TowerPro MG995} is suitable for this project. The specifications provided by the manufacturer are as follows:
+
+\begin{table}[!h]
+\caption[Motor Specifications]{TowerPro MG995 Specifications}
+\end{table}
+\begin{center}
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Model}& TowerPro MG995\\
+\hline
+\textbf{Operating Voltage} & 4.8V - 6.6V\\
+\hline
+\textbf{Operating Speed @ 4.8V} & 0.20sec/60$^{\circ}$\\
+\hline
+\textbf{Operating Speed @ 6.6V}& 0.16sec/60$^{\circ}$\\
+\hline
+\textbf{Stall torque @ 4.8V} & 9.4 kg-cm or 0.94 N $\cdot$ m\\
+\hline
+\textbf{Stall torque @ 6.6V} & 11 kg-cm or 1.1 N $\cdot$ m\\
+\hline
+\end{tabular}
+\end{center}
+Prices range between \textbf{Ksh.700} and \textbf{Ksh.1400}
+
+The previous servos used for the project were SG5010 which proved not to be able to handle the torque requirements of the platform, 
+as a result the gears in those servos destroyed. The replacement of the servos with MG995 solved the problem due to the higher torque capacity.
+
 \subsubsection{Finite Element Analysis}
 A Finite Element Analysis was done on the Stewart platform design to determine its performance under given loads. The platform is going to be subjected to a force during wind tunnel testing. A maximum load of 50N is selected for the Finite Element Analysis. This could be more or less since models vary in size. The z-component of the force is considered. 
 The mesh generated is shown in the figure \ref{fig:feamesh}.
@@ -218,94 +262,8 @@ Four strain gauges are required for each leg for a full Wheatstone bridge config
 In this case, as shown in figure \ref{strain}, the load cells are able to measure the axial strain on each leg. R1 and R3 are active strain gauges measuring the compressive Poisson effect (–νe). R2 and R4 are active strain gages measuring the tensile strain (+e). The output generated from the Wheatstone bridge is then amplified and read to determine the strain on each leg.
 In the case of this project, a full bridge strain gauge sensor with each strain gauge orthogonally positioned allowing for elimination of noise and measurement of the strain axially on each rod is used.
 
-
-
-\subsection{Instrumentation of the Stewart Platform}
-
-\subsubsection{Test Flange and Strut}
-The test flange will be used to hold the strut during wind tunnel testing. For optimum results, the reference axis is taken to be in the middle of the middle platform \cite {fernandes_design_nodate}. The flange will be fastened to the moving platform by use of bolts and nuts. Fasteners are more economical and easy to achieve as compared to welding. M6 or M8 nuts can be used for this purpose.
-
-The test flange should hold the strut for a considerable length in order to keep the rotation of the strut below certain predefined values and thus limiting torsion and bending behaviour of the strut during Wind Tunnel testing.
-\begin{center}
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.75\linewidth]{Figures/Test}
-	\caption[Test flange]{Test flange design}
-	\end{figure}
-\end{center}
-The strut will go into the test section of the Wind tunnel at the Fluids lab in JKUAT. The strut should be long enough to position the model under testing in the middle of the test section. The strut will also be subjected to the flow forces in the wind tunnel. It should therefore be made of as small diameter as possible. The strut dimensions of diameter 12.5mm and a length 400mm are practical, based on the Wind Tunnel set-up (Appendix).
-\begin{center}
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.75\linewidth]{Figures/Strut}
-	\caption[Strut]{Strut}
-	\end{figure}
-\end{center}
-
-
-
-\subsection{Electromechanical Design}
-Two methods of actuation are popular with Stewart platforms:
-\begin{itemize}
-\item Linear actuators
-\item Use of motors
-\end{itemize}
-Whereas linear actuators are relatively easy to control, they are very expensive. Thus the choice of motors.
-
-\subsubsection{Motor Selection}
-One parameter was considered in our motor selection i.e. torque required. From the Autodesk Inventor design environment, the mass of the moving platform and mechanical couplings was 2.6kg. Each motor is supposed to move a minimum mass of 0.177kg. Using a servo horn of distance 45mm centre-to-centre, and Distance = $ \pi $ D, then:
-\begin{ceqn}
-\begin{align}
-	Torque = (0.1777 \times 9.81)\times \frac{141.37}{1000} = 0.246 N\cdot m
-\end{align}
-\end{ceqn}
-Motors of minimum torque of 0.2 N $\cdot m$ were considered. But for control considerations, only stepper motors and servo motors were shortlisted. Servo motor was considered over Stepper motor because they are cheaper. Also, we are only interested in 0 - 180 degrees positions.
-
-The Servo motor \textbf{TowerPro SG5010} is suitable for this project. The specifications provided by the manufacturer are as follows:
-
-\begin{table}[!h]
-\caption[Motor Specifications]{TowerPro SG5010 Specifications}
-\end{table}
-\begin{center}
-\begin{tabular}{|l|l|}
-\hline
-\textbf{Model}& TowerPro SG5010\\
-\hline
-\textbf{Operating Voltage} & 4.8V - 6.6V\\
-\hline
-\textbf{Operating Speed @ 4.8V} & 0.20sec/60$^{\circ}$\\
-\hline
-\textbf{Operating Speed @ 6.6V}& 0.16sec/60$^{\circ}$\\
-\hline
-\textbf{Stall torque @ 4.8V} & 5.5 kg-cm or 0.54 N $\cdot$ m\\
-\hline
-\textbf{Stall torque @ 6.6V} & 6.5 kg-cm or 0.64 N $\cdot$ m\\
-\hline
-\end{tabular}
-\end{center}
-Prices range between \textbf{Ksh.700} and \textbf{Ksh.1400}
-
-
-%\paragraph{Force measurement Circuit}
-\subsubsection*{Force measurement Circuit}
-
-The output excitation of the Wheatstone bridge needs to be amplified as it results in low outputs. An analogue to digital converter is also required for the analogue to digital converter. Some considerable options are the HX711 or the AD7193 converters which may be used as digital to analogue converters. The AD7193 is designed for high precision and has a delta sigma filter to remove noise from measurements.  However, the AD7193 was not used due to it's high cost compared to the HX711 regardless of the advantage it offers with serial peripheral Interface communication allowing for multiple modules on the same bus.
-
-The connection of the AD7193 to the microcontroller will be via Serial Peripheral Interface (SPI). The configuration is as shown in figure \ref{spi}:
-\begin{center}
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.55\linewidth]{Figures/SPI}
-\caption[SPI configuration]{SPI configuration}
-\label{spi}
-\end{figure}
-\end{center}
-In this configuration the when the chip select pin of an amplifier is set to low, the microcontroller is able to obtain data from that strain gauge. This configuration allows for a four wire interface to connect to six strain gauge sensors and obtain measurements.
-
-The HX711 however allows for the I2C like communication via two wires (serial clock (SCL) and Serial Data (SDA)). They however do not have hardware addresses thus many pins are required for the interface, This can however be remedied by the use of a shared SCL between each of the amplifier modules reducing the overall number of pins required to interface.
-
 \subsubsection*{Force transformation matrix} 
-In such a case the forces experienced at the top of the platform are distributed between the 6 legs and as result, a force transformation matrix is required to resolve the forces applied on each axis as measured by each load cell on each leg. 
+The forces experienced at the top of the platform are distributed between the 6 legs and as result, a force transformation matrix is required to resolve the forces applied on each axis as measured by each load cell on each leg. 
 
 The forces experienced by the legs can be expressed as:
 \begin{ceqn}
@@ -325,7 +283,6 @@ Where
 \item F - axial force
 \end{itemize}  
 The derivation has been done and is presented in the appendix.
-
 
 \subsection{Velocity Measurement}
 An important part in wind tunnel measurements is the measure of pressure at specific points in the wind tunnel and computing the corresponding air speed. This is achieved by the use of a pitot probe. 
@@ -356,42 +313,9 @@ Three pitot probes are to be used in the wind tunnel i.e. in the test section, i
 \label{fig:rs485}
 \end{figure}
 \end{center}
-Module communicates to the microcontroller using a TTL to RS485. Each module is individually addressable further simplifying the interface as shown in figure \ref{fig:rs485}. 
+The module communicates to the microcontroller using a TTL to RS485. Each module is individually addressable further simplifying the interface as shown in figure \ref{fig:rs485}. 
 The protocol allows for long distance serial communication and interface with multiple devices on the same bus.
 
-\subsection{Control system}
-This section deals with the control of the stewart platform. It involves allowing input and obtaining output form the platform force balance.
-\subsubsection{Human Machine Interface}
-The purpose of the interface is to enable control of the platform position as well as to obtain measured data from the strain gauges and pitot tubes. 
-The general layout is as shown in the figure \ref{fig:hmi}:
-\begin{center}
-\begin{figure}[H]
-\centering
-\includegraphics{Figures/Interface}
-\caption[Human Machine Interface]{Human Machine Interface}
-\label{fig:hmi}
-\end{figure}
-\end{center}
-
-The primary interface between the microcontroller is wireless. 
-For this interface two transport methods were considered: User Datagram Protocol (UDP) and Transmission Control protocol (TCP).
-UDP is a communications protocol that is primarily used to establish low-latency and loss-tolerating connections.
- TCP on the hand does not experience data loss and in our case the use of protocol buffers as a means of serialization of messages to binary saving on bandwidth. 
- TCP requires only one initial handshake between the server and client, after which messages can be transmitted continuously (streaming).
- Due to assurance of data integrity (no loss) and lower bandwidth use thus higher data transfer rates, TCP was chosen as the main protocol.
-  This allows for high speed low latency communication without need for a wired connection. It also allows for bidirectional streaming of information thus allowing for both control input and output of measured values. The interface is to enable the abstraction of data acquisition and actuator control to a simple interaction with buttons and other visual interfaces available in a computer program.
-
-The decoupling of the microcontroller and the program to be hosted on the desktop allows for advanced data processing such as application of filters and resolving measurements into usable information. It also allows for the use of more powerful processor and high level programming languages to more effectively perform complex calculations without taking a toll the sensor sampling rate that would occur with on board processing in the microcontroller.
-
-A user interface was also required to record user input and display incoming data.
-\subsubsection{Control Algorithm}
-\begin{center}
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.7\linewidth]{Figures/Flow}
-	\caption[Control Algorithm]{Control Algorithm for the Stewart Platform with Force Measurement}
-	\end{figure}
-\end{center}
 \subsection{Electrical Design}
 This section looks at the required electrical connections to make the system functional and interface with the control unit.
 \subsubsection{Printed Circuit Board Design}
@@ -439,3 +363,54 @@ Since the microcontroller used (ESP32) is based on 3.3V logic. There is a need f
 	\end{figure}
 \end{center}
 The configuration designed is shown in figure \ref{fig:logik}
+
+\subsubsection{Force measurement Circuit}
+
+The output excitation of the Wheatstone bridge needs to be amplified as it results in low outputs. An analogue to digital converter is also required for the analogue to digital converter. Some considerable options are the HX711 or the AD7193 converters which may be used as digital to analogue converters. The AD7193 is designed for high precision and has a delta sigma filter to remove noise from measurements.  However, the AD7193 was not used due to it's high cost compared to the HX711 regardless of the advantage it offers with serial peripheral Interface communication allowing for multiple modules on the same bus.
+
+The connection of the AD7193 to the microcontroller will be via Serial Peripheral Interface (SPI). The configuration is as shown in figure \ref{spi}:
+\begin{center}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.55\linewidth]{Figures/SPI}
+\caption[SPI configuration]{SPI configuration}
+\label{spi}
+\end{figure}
+\end{center}
+In this configuration the when the chip select pin of an amplifier is set to low, the microcontroller is able to obtain data from that strain gauge. This configuration allows for a four wire interface to connect to six strain gauge sensors and obtain measurements.
+
+The HX711 however allows for the I2C like communication via two wires (serial clock (SCL) and Serial Data (SDA)). They however do not have hardware addresses thus many pins are required for the interface, This can however be remedied by the use of a shared SCL between each of the amplifier modules reducing the overall number of pins required to interface.
+
+\subsection{Software and Control}
+This section deals with the control of the stewart platform. It involves allowing input and obtaining output form the platform force balance.
+\subsubsection{Human Machine Interface}
+The purpose of the interface is to enable control of the platform position as well as to obtain measured data from the strain gauges and pitot tubes. 
+The general layout is as shown in the figure \ref{fig:hmi}:
+\begin{center}
+\begin{figure}[H]
+\centering
+\includegraphics{Figures/Interface}
+\caption[Human Machine Interface]{Human Machine Interface}
+\label{fig:hmi}
+\end{figure}
+\end{center}
+
+The primary interface between the microcontroller is wireless. 
+For this interface two transport methods were considered: User Datagram Protocol (UDP) and Transmission Control protocol (TCP).
+UDP is a communications protocol that is primarily used to establish low-latency and loss-tolerating connections.
+ TCP on the hand does not experience data loss and in our case the use of protocol buffers as a means of serialization of messages to binary saving on bandwidth. 
+ TCP requires only one initial handshake between the server and client, after which messages can be transmitted continuously (streaming).
+ Due to assurance of data integrity (no loss) and lower bandwidth use thus higher data transfer rates, TCP was chosen as the main protocol.
+  This allows for high speed low latency communication without need for a wired connection. It also allows for bidirectional streaming of information thus allowing for both control input and output of measured values. The interface is to enable the abstraction of data acquisition and actuator control to a simple interaction with buttons and other visual interfaces available in a computer program.
+
+The decoupling of the microcontroller and the program to be hosted on the desktop allows for advanced data processing such as application of filters and resolving measurements into usable information. It also allows for the use of more powerful processor and high level programming languages to more effectively perform complex calculations without taking a toll the sensor sampling rate that would occur with on board processing in the microcontroller.
+
+A user interface was also required to record user input and display incoming data.
+\subsubsection{Control Algorithm}
+\begin{center}
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\linewidth]{Figures/Flow}
+	\caption[Control Algorithm]{Control Algorithm for the Stewart Platform with Force Measurement}
+	\end{figure}
+\end{center}
