f(methodology) strain gauges

--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -284,6 +284,26 @@ Where
 \end{itemize}  
 The derivation has been done and is presented in the appendix.
 
+\subsubsection*{Bonding strain gauges}
+The bonding of the strain gauges to the rods followed the following process:
+\begin{itemize}
+	\item Roughing of boding surface using sand paper
+	\item Cleaning bonding surface using acetone
+	\item Apply super glue to bonding surface and bond the strain gauge to the rod
+	\item Apply resin (araldite) on the bonded strain gauge to protect the strain gauge from damage
+	\item Solder jumper wires to the leads on the strain gauge as shown in \ref{fig:strain_bond}.
+	\item Finally cover the assembly with heat shrinkable tubing 
+\end{itemize}
+\begin{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.7\linewidth]{Figures/strain_bond}
+		\caption[Strain gauge bonding process]{Strain gauge bonding process}
+		\label{fig:strain_bond}
+	\end{figure}
+\end{center}
+
+
 \subsection{Velocity Measurement}
 An important part in wind tunnel measurements is the measure of pressure at specific points in the wind tunnel and computing the corresponding air speed. This is achieved by the use of a pitot probe. 
 \begin{center}
