--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -6,7 +6,7 @@ The assembled Stewart platform is as shown in figure \ref{fig}. Figure \ref{fig1
 \begin{center}
 	\begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\linewidth]{Figures/Assembly}
+	\includegraphics[width=0.6\linewidth]{Figures/stew_asm.jpg}
 	\caption[Assembled Platform]{Assembly of Stewart Platform}
 	\label{fig}
 	\end{figure}
@@ -14,26 +14,17 @@ The assembled Stewart platform is as shown in figure \ref{fig}. Figure \ref{fig1
 \begin{center}
 	\begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\linewidth]{Figures/Test-section}
+	\includegraphics[width=0.7\linewidth]{Figures/stew_wind1.png}
 	\caption[Model placement in Test Section]{Stewart platform and Test section configuration}
 	\label{fig1}
 	\end{figure}
-\end{center}
-Assembling the Stewart platform legs as shown in \ref{fig} makes it easier to achieve the six degrees of freedom as opposed to having two legs attached on the same flange as in figure \ref{fig2}.
-\begin{center}
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.3\linewidth]{Figures/assembly2}
-\caption[Stewart platform assembly]{Stewart platform alternative assembly}
-\label{fig2}
-\end{figure}
 \end{center}
 \subsubsection{Stability}
 The base of the Stewart platform has a bigger diameter (300mm) than that of the moving platform (200mm) hence the center of gravity will always fall within the base during operation. The Stewart platform is therefore stable.
 \subsubsection{Mechanical Feasibility}
 Based on the base and platform diameters, distance between the base and platform (i.e. height), an angle of attack of 0.25, and side slip angle of 0.16667, the quality index ($\lambda$) of the Stewart platform was found to be 0.86. This presents a design with few singularities. It is therefore mechanically feasible.
 \subsubsection{Weight}
-3D models of the Stewart platform were modeled on Autodesk Inventor using the three materials described earlier. Use of aluminum was verified to offer the most light-weight design.
+3D models of the Stewart platform were modelled on Autodesk Inventor using the three materials described earlier. Use of aluminum was verified to offer the most light-weight design.
 \begin{table}[H]
 \caption{Weight Comparisons}
 \end{table}
@@ -159,3 +150,15 @@ The schematics from the electrical designs as seen in the appendix were routed t
 	\end{figure}
 \end{center}
 The PCB is meant to be compact as shown in the figure \ref{fig:pcb3d}. It is also integrates most of the components to minimize use of wires to make connections. 
+
+\subsection{Smoke Visualization}
+The smoke emitting device was 3D printed and assembled into the wind tunnel as shown in \ref{fig:smoke_res}. 
+The device was able to create streamlines of smoke to improve visibility in the wind tunnel.
+\begin{center}
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.5\linewidth]{Figures/Screenshot_20221211-185935.png}
+		\caption[Smoke Emitting Device]{Smoke Emitting Device}
+		\label{fig:smoke_res}
+	\end{figure}
+\end{center}
