--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -450,13 +450,13 @@ in JKUAT. The rake design is shown in figure \ref{smoke}.
 \begin{center}
 	\begin{figure}[H]
 	\centering
-	\includegraphics[width=0.7\linewidth]{Figures/rake design.JPG}
+	\includegraphics[width=0.7\linewidth]{Figures/smoke and rake.JPG}
 	\caption[Smoke Rake]{Smoke rake design}
 	\label{smoke}
 	\end{figure}
 \end{center}
-Both the smoke emitting holes and the air inlet holes are 6mm in diameter. 20mm diameter hole shown in the 
-plan view is for metal pipe connection.
+The smoke emitting holes are 6mm in diameter and the air inlet holes are 5mm in diameter.
+ 20mm diameter hole on the lid (color coded red) shown in the  plan view is for metal pipe connection.
 
 \subsubsection{Smoke Rake and Pipe Assembly}
 A metal pipe is used to provide rigid support to the smoke rake in the wind tunnel as well as placing it at the center
